<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/Includelayout"
        layout="@layout/include_toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Includelayout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/task_description" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Email_icon_spn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="18dp"
                android:src="@drawable/email_icon" />

            <Spinner
                android:id="@+id/SpnTaskName"
                style="?android:attr/spinnerDropDownItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/Email_icon_spn"
                android:background="@android:color/transparent"
                android:text="" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".05"
                android:paddingRight="10dp"
                android:src="@drawable/down_arrowspn" />
        </RelativeLayout>

        <View style="@style/sectionDivider" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/attachment"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/uploadLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight=".2"
                    android:padding="10dp"
                    android:src="@drawable/upload" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:text="@string/upload_image_video" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/UploadImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:src="@color/sendTextColor" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/enter_your_comments" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:src="@drawable/email_icon" />

            <EditText
                android:id="@+id/CommentEdit"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/Email_icon"
                android:background="@null"
                android:hint="you are comment goes here"
                android:inputType="text"
                android:text="" />
        </RelativeLayout>

        <View style="@style/sectionDivider" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/specify_numbers_of_hours" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/NumberHoursEdit"
                style="?android:attr/spinnerDropDownItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/user_icon"
                android:background="@null"
                android:hint="@string/number_of_hours"
                android:inputType="phone"
                android:text="" />
        </RelativeLayout>

        <View style="@style/sectionDivider" />

        <com.time_em.controls.RoundedCornerView
            android:id="@+id/AddTaskBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/SignIn"
                style="@style/TextSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/sendTextColor"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/add" />

        </com.time_em.controls.RoundedCornerView>

    </LinearLayout>
</RelativeLayout>