<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/header_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_marginBottom="10dp"
        android:scrollbars="none"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="17sp"
                android:padding="10dp"
                android:text="" />

            <TextView style="@style/separator" />

            <TextView
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginRight="15dp"
                android:text="@string/task_description" />

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:id="@+id/taskDesc"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="df" />

            <TextView
                android:layout_marginTop="5dp"
                style="@style/separator" />

            <TextView
                style="@style/HeaderText"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:text="@string/comments" />

            <TextView
                android:id="@+id/taskComments"
                android:textColor="@color/cardview_dark_background"
                android:maxLines = "3"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="cc" />

            <TextView
                android:layout_marginTop="5dp"
                style="@style/separator" />

            <TextView
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:text="@string/hours_worked" />

            <TextView
                android:id="@+id/hoursWorked"
                android:textColor="@color/cardview_dark_background"
                android:layout_marginLeft="15dp"
                android:layout_width="fill_parent"
                android:textSize="14sp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:text="12" />

            <TextView
                android:layout_marginTop="5dp"
                style="@style/separator" />

            <TextView
                android:id="@+id/AttachementTxt"
                style="@style/HeaderText"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/attachment" />

            <ImageView
                android:id="@+id/attachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                />
        <!-- <VideoView
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:id="@+id/videoView"/>-->
         <!--   <com.afollestad.easyvideoplayer.EasyVideoPlayer
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:id="@+id/videoView"

                android:layout_width="match_parent"
                android:layout_height="200dp" />
                />&ndash;&gt;-->

          <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
